--- a/rimijoker.html
+++ b/rimijoker.html
@@ -1,5 +1,5 @@
 <span id="a">danish@45007</span>:<span id="b">~</span><span id="c">$</span> pwd
-/mnt/c/Users/DANISH
+/mnt/c/Users
 <span id="a">danish@45007</span>:<span id="b">~</span><span id="c">$</span> cd Danish/About_Me
 <span id="a">danish@45007</span>:<span id="b">~</span><span id="c">$</span> cat Danish.txt<br/><br/>
 "<span id="k">Hey there, nice to see you here.</span>"
@@ -13,4 +13,4 @@ This is Danish.<p>Welcome</p>
 
 You can also contact me through email, feel free to send me an email at <span id="d"><strong>"danish45007@gmail.com"</strong></span>
 
-<p><u>Cheers!</u></p>
+<p><span id="r"><strong>Cheers!</strong></span></p>
