--Added resume link

--- a/rimijoker.html
+++ b/rimijoker.html
@@ -5,7 +5,7 @@
 "<span id="k">Hey there, nice to see you here.</span>"
 
 This is Danish.<p>Welcome</p>
-<p>I am a self taught Python Developer, you can checkout my resume here. <a href="#Link"><b>Resume</b></a></p>
+<p>I am a self taught Python Developer, you can checkout my resume here. <a href="http://35.154.16.54:8000/"><b>Resume</b></a></p>
 <p>I usally waste my time doing cool projects.<br><br><br>You can checkout my projects on my resume, but if you are more
     tech savy, here is my <a href="https://github.com/danish45007"><b>GitHub</b></a> link.</p>
 <p> You can visit my LinkedIn, here: <a href="https://www.linkedin.com/in/danish-sharma-63623b14a/"><b>LinkedIn</b></a> <br>
